lib/iwad_runtime_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/iwadr.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class IwadRuntimeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  IwadRuntimeBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  IwadRuntimeBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int iwadr_screen_width() {
    return _iwadr_screen_width();
  }

  late final _iwadr_screen_widthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_screen_width');
  late final _iwadr_screen_width = _iwadr_screen_widthPtr
      .asFunction<int Function()>();

  int iwadr_screen_height() {
    return _iwadr_screen_height();
  }

  late final _iwadr_screen_heightPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_screen_height');
  late final _iwadr_screen_height = _iwadr_screen_heightPtr
      .asFunction<int Function()>();

  int iwadr_is_started() {
    return _iwadr_is_started();
  }

  late final _iwadr_is_startedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_is_started');
  late final _iwadr_is_started = _iwadr_is_startedPtr
      .asFunction<int Function()>();

  int iwadr_has_quit() {
    return _iwadr_has_quit();
  }

  late final _iwadr_has_quitPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_has_quit');
  late final _iwadr_has_quit = _iwadr_has_quitPtr.asFunction<int Function()>();

  ffi.Pointer<ffi.Char> iwadr_last_error() {
    return _iwadr_last_error();
  }

  late final _iwadr_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'iwadr_last_error',
      );
  late final _iwadr_last_error = _iwadr_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  void iwadr_set_temp_dir(ffi.Pointer<ffi.Char> temp_dir) {
    return _iwadr_set_temp_dir(temp_dir);
  }

  late final _iwadr_set_temp_dirPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'iwadr_set_temp_dir',
      );
  late final _iwadr_set_temp_dir = _iwadr_set_temp_dirPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void iwadr_shutdown() {
    return _iwadr_shutdown();
  }

  late final _iwadr_shutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('iwadr_shutdown');
  late final _iwadr_shutdown = _iwadr_shutdownPtr.asFunction<void Function()>();

  int iwadr_start(ffi.Pointer<ffi.Char> iwad_path) {
    return _iwadr_start(iwad_path);
  }

  late final _iwadr_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'iwadr_start',
      );
  late final _iwadr_start = _iwadr_startPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int iwadr_multiplayer_is_supported() {
    return _iwadr_multiplayer_is_supported();
  }

  late final _iwadr_multiplayer_is_supportedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_multiplayer_is_supported',
      );
  late final _iwadr_multiplayer_is_supported =
      _iwadr_multiplayer_is_supportedPtr.asFunction<int Function()>();

  int iwadr_ticcmd_size() {
    return _iwadr_ticcmd_size();
  }

  late final _iwadr_ticcmd_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_ticcmd_size');
  late final _iwadr_ticcmd_size = _iwadr_ticcmd_sizePtr
      .asFunction<int Function()>();

  int iwadr_max_players() {
    return _iwadr_max_players();
  }

  late final _iwadr_max_playersPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_max_players');
  late final _iwadr_max_players = _iwadr_max_playersPtr
      .asFunction<int Function()>();

  int iwadr_start_multiplayer(
    ffi.Pointer<ffi.Char> iwad_path,
    int player_count,
    int local_player,
    int deathmatch,
    int episode,
    int map,
    int skill,
    int no_monsters,
    int fast_monsters,
    int respawn_monsters,
    int ticdup_value,
  ) {
    return _iwadr_start_multiplayer(
      iwad_path,
      player_count,
      local_player,
      deathmatch,
      episode,
      map,
      skill,
      no_monsters,
      fast_monsters,
      respawn_monsters,
      ticdup_value,
    );
  }

  late final _iwadr_start_multiplayerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('iwadr_start_multiplayer');
  late final _iwadr_start_multiplayer = _iwadr_start_multiplayerPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
          int,
        )
      >();

  int iwadr_build_local_ticcmd(ffi.Pointer<ffi.Uint8> out, int out_len) {
    return _iwadr_build_local_ticcmd(out, out_len);
  }

  late final _iwadr_build_local_ticcmdPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('iwadr_build_local_ticcmd');
  late final _iwadr_build_local_ticcmd = _iwadr_build_local_ticcmdPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int iwadr_run_synchronized_tic(
    ffi.Pointer<ffi.Uint8> commands,
    ffi.Pointer<ffi.Int> present,
    int player_count,
  ) {
    return _iwadr_run_synchronized_tic(commands, present, player_count);
  }

  late final _iwadr_run_synchronized_ticPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Int>,
            ffi.Int,
          )
        >
      >('iwadr_run_synchronized_tic');
  late final _iwadr_run_synchronized_tic = _iwadr_run_synchronized_ticPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Int>, int)
      >();

  int iwadr_sync_checksum() {
    return _iwadr_sync_checksum();
  }

  late final _iwadr_sync_checksumPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>('iwadr_sync_checksum');
  late final _iwadr_sync_checksum = _iwadr_sync_checksumPtr
      .asFunction<int Function()>();

  int iwadr_start_new_game(int skill, int episode, int map) {
    return _iwadr_start_new_game(skill, episode, map);
  }

  late final _iwadr_start_new_gamePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Int)>>(
        'iwadr_start_new_game',
      );
  late final _iwadr_start_new_game = _iwadr_start_new_gamePtr
      .asFunction<int Function(int, int, int)>();

  int iwadr_save_game(int slot, ffi.Pointer<ffi.Char> description) {
    return _iwadr_save_game(slot, description);
  }

  late final _iwadr_save_gamePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>
      >('iwadr_save_game');
  late final _iwadr_save_game = _iwadr_save_gamePtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  int iwadr_load_game(int slot) {
    return _iwadr_load_game(slot);
  }

  late final _iwadr_load_gamePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('iwadr_load_game');
  late final _iwadr_load_game = _iwadr_load_gamePtr
      .asFunction<int Function(int)>();

  int iwadr_save_game_exists(int slot) {
    return _iwadr_save_game_exists(slot);
  }

  late final _iwadr_save_game_existsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'iwadr_save_game_exists',
      );
  late final _iwadr_save_game_exists = _iwadr_save_game_existsPtr
      .asFunction<int Function(int)>();

  int iwadr_save_game_size(int slot) {
    return _iwadr_save_game_size(slot);
  }

  late final _iwadr_save_game_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'iwadr_save_game_size',
      );
  late final _iwadr_save_game_size = _iwadr_save_game_sizePtr
      .asFunction<int Function(int)>();

  int iwadr_save_generation() {
    return _iwadr_save_generation();
  }

  late final _iwadr_save_generationPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_save_generation');
  late final _iwadr_save_generation = _iwadr_save_generationPtr
      .asFunction<int Function()>();

  int iwadr_tick() {
    return _iwadr_tick();
  }

  late final _iwadr_tickPtr = _lookup<ffi.NativeFunction<ffi.Int Function()>>(
    'iwadr_tick',
  );
  late final _iwadr_tick = _iwadr_tickPtr.asFunction<int Function()>();

  int iwadr_copy_frame_rgba(ffi.Pointer<ffi.Uint8> out, int out_len) {
    return _iwadr_copy_frame_rgba(out, out_len);
  }

  late final _iwadr_copy_frame_rgbaPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('iwadr_copy_frame_rgba');
  late final _iwadr_copy_frame_rgba = _iwadr_copy_frame_rgbaPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  void iwadr_key_event(int input_key, int pressed) {
    return _iwadr_key_event(input_key, pressed);
  }

  late final _iwadr_key_eventPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'iwadr_key_event',
      );
  late final _iwadr_key_event = _iwadr_key_eventPtr
      .asFunction<void Function(int, int)>();

  void iwadr_request_weapon_slot(int slot) {
    return _iwadr_request_weapon_slot(slot);
  }

  late final _iwadr_request_weapon_slotPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'iwadr_request_weapon_slot',
      );
  late final _iwadr_request_weapon_slot = _iwadr_request_weapon_slotPtr
      .asFunction<void Function(int)>();

  int iwadr_current_weapon_slot() {
    return _iwadr_current_weapon_slot();
  }

  late final _iwadr_current_weapon_slotPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_current_weapon_slot',
      );
  late final _iwadr_current_weapon_slot = _iwadr_current_weapon_slotPtr
      .asFunction<int Function()>();

  int iwadr_owned_weapon_slots_mask() {
    return _iwadr_owned_weapon_slots_mask();
  }

  late final _iwadr_owned_weapon_slots_maskPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_owned_weapon_slots_mask',
      );
  late final _iwadr_owned_weapon_slots_mask = _iwadr_owned_weapon_slots_maskPtr
      .asFunction<int Function()>();

  int iwadr_is_gameplay_active() {
    return _iwadr_is_gameplay_active();
  }

  late final _iwadr_is_gameplay_activePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_is_gameplay_active',
      );
  late final _iwadr_is_gameplay_active = _iwadr_is_gameplay_activePtr
      .asFunction<int Function()>();

  int iwadr_is_player_dead() {
    return _iwadr_is_player_dead();
  }

  late final _iwadr_is_player_deadPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_is_player_dead');
  late final _iwadr_is_player_dead = _iwadr_is_player_deadPtr
      .asFunction<int Function()>();

  int iwadr_is_advance_active() {
    return _iwadr_is_advance_active();
  }

  late final _iwadr_is_advance_activePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_is_advance_active',
      );
  late final _iwadr_is_advance_active = _iwadr_is_advance_activePtr
      .asFunction<int Function()>();

  int iwadr_is_menu_active() {
    return _iwadr_is_menu_active();
  }

  late final _iwadr_is_menu_activePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_is_menu_active');
  late final _iwadr_is_menu_active = _iwadr_is_menu_activePtr
      .asFunction<int Function()>();

  int iwadr_is_menu_prompt_active() {
    return _iwadr_is_menu_prompt_active();
  }

  late final _iwadr_is_menu_prompt_activePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_is_menu_prompt_active',
      );
  late final _iwadr_is_menu_prompt_active = _iwadr_is_menu_prompt_activePtr
      .asFunction<int Function()>();

  int iwadr_is_save_name_active() {
    return _iwadr_is_save_name_active();
  }

  late final _iwadr_is_save_name_activePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_is_save_name_active',
      );
  late final _iwadr_is_save_name_active = _iwadr_is_save_name_activePtr
      .asFunction<int Function()>();

  int iwadr_is_quit_confirm_active() {
    return _iwadr_is_quit_confirm_active();
  }

  late final _iwadr_is_quit_confirm_activePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_is_quit_confirm_active',
      );
  late final _iwadr_is_quit_confirm_active = _iwadr_is_quit_confirm_activePtr
      .asFunction<int Function()>();

  void iwadr_mouse_event(int buttons, int delta_x, int delta_y) {
    return _iwadr_mouse_event(buttons, delta_x, delta_y);
  }

  late final _iwadr_mouse_eventPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.Int)>>(
        'iwadr_mouse_event',
      );
  late final _iwadr_mouse_event = _iwadr_mouse_eventPtr
      .asFunction<void Function(int, int, int)>();

  void iwadr_set_suspended(int suspended) {
    return _iwadr_set_suspended(suspended);
  }

  late final _iwadr_set_suspendedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'iwadr_set_suspended',
      );
  late final _iwadr_set_suspended = _iwadr_set_suspendedPtr
      .asFunction<void Function(int)>();

  int iwadr_set_mouse_capture(int enabled) {
    return _iwadr_set_mouse_capture(enabled);
  }

  late final _iwadr_set_mouse_capturePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'iwadr_set_mouse_capture',
      );
  late final _iwadr_set_mouse_capture = _iwadr_set_mouse_capturePtr
      .asFunction<int Function(int)>();

  int iwadr_poll_mouse_delta(
    ffi.Pointer<ffi.Int> delta_x,
    ffi.Pointer<ffi.Int> delta_y,
  ) {
    return _iwadr_poll_mouse_delta(delta_x, delta_y);
  }

  late final _iwadr_poll_mouse_deltaPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Int>)
        >
      >('iwadr_poll_mouse_delta');
  late final _iwadr_poll_mouse_delta = _iwadr_poll_mouse_deltaPtr
      .asFunction<int Function(ffi.Pointer<ffi.Int>, ffi.Pointer<ffi.Int>)>();

  int iwadr_audio_is_started() {
    return _iwadr_audio_is_started();
  }

  late final _iwadr_audio_is_startedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_audio_is_started');
  late final _iwadr_audio_is_started = _iwadr_audio_is_startedPtr
      .asFunction<int Function()>();

  void iwadr_audio_set_suspended(int suspended) {
    return _iwadr_audio_set_suspended(suspended);
  }

  late final _iwadr_audio_set_suspendedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'iwadr_audio_set_suspended',
      );
  late final _iwadr_audio_set_suspended = _iwadr_audio_set_suspendedPtr
      .asFunction<void Function(int)>();

  int iwadr_audio_is_suspended() {
    return _iwadr_audio_is_suspended();
  }

  late final _iwadr_audio_is_suspendedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_audio_is_suspended',
      );
  late final _iwadr_audio_is_suspended = _iwadr_audio_is_suspendedPtr
      .asFunction<int Function()>();

  int iwadr_audio_started_sound_count() {
    return _iwadr_audio_started_sound_count();
  }

  late final _iwadr_audio_started_sound_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_audio_started_sound_count',
      );
  late final _iwadr_audio_started_sound_count =
      _iwadr_audio_started_sound_countPtr.asFunction<int Function()>();

  int iwadr_audio_active_voice_count() {
    return _iwadr_audio_active_voice_count();
  }

  late final _iwadr_audio_active_voice_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_audio_active_voice_count',
      );
  late final _iwadr_audio_active_voice_count =
      _iwadr_audio_active_voice_countPtr.asFunction<int Function()>();

  int iwadr_audio_sample_rate() {
    return _iwadr_audio_sample_rate();
  }

  late final _iwadr_audio_sample_ratePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_audio_sample_rate',
      );
  late final _iwadr_audio_sample_rate = _iwadr_audio_sample_ratePtr
      .asFunction<int Function()>();

  int iwadr_audio_callback_count() {
    return _iwadr_audio_callback_count();
  }

  late final _iwadr_audio_callback_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_audio_callback_count',
      );
  late final _iwadr_audio_callback_count = _iwadr_audio_callback_countPtr
      .asFunction<int Function()>();

  int iwadr_audio_max_callback_frame_count() {
    return _iwadr_audio_max_callback_frame_count();
  }

  late final _iwadr_audio_max_callback_frame_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_audio_max_callback_frame_count',
      );
  late final _iwadr_audio_max_callback_frame_count =
      _iwadr_audio_max_callback_frame_countPtr.asFunction<int Function()>();

  int iwadr_audio_clip_count() {
    return _iwadr_audio_clip_count();
  }

  late final _iwadr_audio_clip_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_audio_clip_count');
  late final _iwadr_audio_clip_count = _iwadr_audio_clip_countPtr
      .asFunction<int Function()>();

  int iwadr_audio_peak_output_milli() {
    return _iwadr_audio_peak_output_milli();
  }

  late final _iwadr_audio_peak_output_milliPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_audio_peak_output_milli',
      );
  late final _iwadr_audio_peak_output_milli = _iwadr_audio_peak_output_milliPtr
      .asFunction<int Function()>();

  int iwadr_audio_max_jump_milli() {
    return _iwadr_audio_max_jump_milli();
  }

  late final _iwadr_audio_max_jump_milliPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_audio_max_jump_milli',
      );
  late final _iwadr_audio_max_jump_milli = _iwadr_audio_max_jump_milliPtr
      .asFunction<int Function()>();

  int iwadr_music_is_initialized() {
    return _iwadr_music_is_initialized();
  }

  late final _iwadr_music_is_initializedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_music_is_initialized',
      );
  late final _iwadr_music_is_initialized = _iwadr_music_is_initializedPtr
      .asFunction<int Function()>();

  int iwadr_music_register_count() {
    return _iwadr_music_register_count();
  }

  late final _iwadr_music_register_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_music_register_count',
      );
  late final _iwadr_music_register_count = _iwadr_music_register_countPtr
      .asFunction<int Function()>();

  int iwadr_music_play_count() {
    return _iwadr_music_play_count();
  }

  late final _iwadr_music_play_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_music_play_count');
  late final _iwadr_music_play_count = _iwadr_music_play_countPtr
      .asFunction<int Function()>();

  int iwadr_opl_mixed_frame_count() {
    return _iwadr_opl_mixed_frame_count();
  }

  late final _iwadr_opl_mixed_frame_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_opl_mixed_frame_count',
      );
  late final _iwadr_opl_mixed_frame_count = _iwadr_opl_mixed_frame_countPtr
      .asFunction<int Function()>();

  int iwadr_opl_nonzero_mix_count() {
    return _iwadr_opl_nonzero_mix_count();
  }

  late final _iwadr_opl_nonzero_mix_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_opl_nonzero_mix_count',
      );
  late final _iwadr_opl_nonzero_mix_count = _iwadr_opl_nonzero_mix_countPtr
      .asFunction<int Function()>();

  int iwadr_opl_peak_sample() {
    return _iwadr_opl_peak_sample();
  }

  late final _iwadr_opl_peak_samplePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('iwadr_opl_peak_sample');
  late final _iwadr_opl_peak_sample = _iwadr_opl_peak_samplePtr
      .asFunction<int Function()>();

  int iwadr_opl_peak_output_milli() {
    return _iwadr_opl_peak_output_milli();
  }

  late final _iwadr_opl_peak_output_milliPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_opl_peak_output_milli',
      );
  late final _iwadr_opl_peak_output_milli = _iwadr_opl_peak_output_milliPtr
      .asFunction<int Function()>();

  int iwadr_opl_max_jump_milli() {
    return _iwadr_opl_max_jump_milli();
  }

  late final _iwadr_opl_max_jump_milliPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
        'iwadr_opl_max_jump_milli',
      );
  late final _iwadr_opl_max_jump_milli = _iwadr_opl_max_jump_milliPtr
      .asFunction<int Function()>();
}

const int IWADR_SCREEN_WIDTH = 640;

const int IWADR_SCREEN_HEIGHT = 400;

const int IWADR_BYTES_PER_PIXEL = 4;
